--- a/gradle.properties
+++ b/gradle.properties
@@ -3,9 +3,9 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 	# check these on https://fabricmc.net/use
-	minecraft_version=1.14.4
-	yarn_mappings=1.14.4+build.2
-	loader_version=0.4.8+build.157
+minecraft_version=1.15-pre2
+yarn_mappings=1.15-pre2+build.2
+loader_version=0.7.1+build.173
 
 # Mod Properties
 	mod_version = 1.1.2
