--- a/build.gradle
+++ b/build.gradle
@@ -26,8 +26,8 @@ dependencies {
 	// Fabric API. This is technically optional, but you probably want it anyway.
 	//modCompile "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 
-	modApi "io.github.cottonmc:Jankson:${project.jankson_version}"
-	include "io.github.cottonmc:Jankson:${project.jankson_version}"
+	modApi "io.github.cottonmc:Jankson-Fabric:${project.jankson_version}"
+	include "io.github.cottonmc:Jankson-Fabric:${project.jankson_version}"
 
 	//modImplementation "me.shedaniel.cloth:config-2:${project.cloth_config_version}"
 
