--- a/build.gradle
+++ b/build.gradle
@@ -23,13 +23,10 @@ dependencies {
 	mappings "net.fabricmc:yarn:${project.yarn_mappings}"
 	modCompile "net.fabricmc:fabric-loader:${project.loader_version}"
 
-	// Fabric API. This is technically optional, but you probably want it anyway.
-	//modCompile "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
-
 	modApi "io.github.cottonmc:Jankson-Fabric:${project.jankson_version}"
 	include "io.github.cottonmc:Jankson-Fabric:${project.jankson_version}"
 
-	//modImplementation "me.shedaniel.cloth:config-2:${project.cloth_config_version}"
+	modImplementation "me.shedaniel.cloth:config-2:${project.cloth_config_version}"
 
 	// PSA: Some older mods, compiled on Loom 0.2.1, might have outdated Maven POMs.
 	// You may need to force-disable transitiveness on them.
